log/build_2023-11-29_09-56-12/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ryokozuka/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/talker.py", line 9
    responce.age  255
                  ^^^
SyntaxError: invalid syntax

